; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx2/extr_clock_imx21.c__clk_clko_recalc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx2/extr_clock_imx21.c__clk_clko_recalc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32* }

@usb_clk = common dso_local global i32* null, align 8
@CCM_PCDR0 = common dso_local global i32 0, align 4
@CCM_PCDR0_48MDIV_MASK = common dso_local global i64 0, align 8
@CCM_PCDR0_48MDIV_OFFSET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk*)* @_clk_clko_recalc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @_clk_clko_recalc(%struct.clk* %0) #0 {
  %2 = alloca %struct.clk*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store %struct.clk* %0, %struct.clk** %2, align 8
  store i64 0, i64* %3, align 8
  %5 = load %struct.clk*, %struct.clk** %2, align 8
  %6 = getelementptr inbounds %struct.clk, %struct.clk* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = call i64 @clk_get_rate(i32* %7)
  store i64 %8, i64* %4, align 8
  %9 = load %struct.clk*, %struct.clk** %2, align 8
  %10 = getelementptr inbounds %struct.clk, %struct.clk* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = load i32*, i32** @usb_clk, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = icmp eq i32* %11, %13
  br i1 %14, label %15, label %22

15:                                               ; preds = %1
  %16 = load i32, i32* @CCM_PCDR0, align 4
  %17 = call i64 @__raw_readl(i32 %16)
  %18 = load i64, i64* @CCM_PCDR0_48MDIV_MASK, align 8
  %19 = load i64, i64* @CCM_PCDR0_48MDIV_OFFSET, align 8
  %20 = lshr i64 %18, %19
  %21 = and i64 %17, %20
  store i64 %21, i64* %3, align 8
  br label %22

22:                                               ; preds = %15, %1
  %23 = load i64, i64* %3, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %3, align 8
  %25 = load i64, i64* %4, align 8
  %26 = load i64, i64* %3, align 8
  %27 = udiv i64 %25, %26
  ret i64 %27
}

declare dso_local i64 @clk_get_rate(i32*) #1

declare dso_local i64 @__raw_readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
